--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -45,33 +45,48 @@
     "PROGRESS": "Тренутно у изради",
     "faq": {
         "question1": "Шта је пленум?",
-        "answer1": "Студентски пленуми су директно демократско-борбене структуре. Као отворени форуми, где сваки студент има право да дискутује и гласа о питањима стратегије и тактике студентске социјалне борбе. Одлуке пленума су јавне, подложне критикама и изменама од стране учесника пленума. То пленум чини неупоредиво отпорнијим на тајне маневре и малверзације иза затворених врата.",
-        "question2": "Реплика",
-        "answer2": "Реплика је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
-        "question3": "Питање",
-        "answer3": "Питање је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
-        "question4": "Нова реч",
-        "answer4": "Нова реч је право говора које следи након излагања говорника, а које се односи на излагање говорника.",
-        "question5": "Техничка реплика",
-        "answer5": "Кратак одговор у виду чињеничне информације или објашњења без додавања личног мишљења.",
-        "question6": "Како могу да помогнем?",
-        "answer6": "Донацијама (линк) и излажењем на протесте.",
-        "question7": "Ко може да учествује у пленуму?",
-        "answer7": "Сви студенти и студенткиње.",
-        "question8": "Како се донације користе?",
-        "answer8": "Донације се користе за покривање трошкова протеста, штампање летака, организацију перформанса и других догађаја.",
-        "question9": "Шта су радне групе?",
-        "answer9": "Радне групе су групе студената и студенткиња које се баве одређеним темама и задацима. Радне групе су отворене за све заинтересоване студенте и студенткиње.",
-        "question10": "Како могу да се укључим у радне групе?",
-        "answer10": "Можеш да се укључиш у радне групе тако што ћеш посетити неки од пленума и изразити своју жељу да се укључиш у радну групу која те занима."
-    },
+        "answer1": "Пленум је отворени форум на факултету или универзитету на којем се студенти директно окупљају како би расправљали о стратегијама и тактикама протестних акција. На пленуму се, путем колективног гласања, доносе одлуке о организацији протеста, што обезбеђује транспарентност и могућност јавне критике.",
+        
+        "question2": "Како могу да помогнем?",
+        "answer2": "Можеш помоћи на више начина: финансијским донацијама које се користе за покривање трошкова организације протеста (штампање летака, изнајмљивање простора, осигурање заштитне опреме), дељењем информација путем друштвених мрежа, као и личним присуством на протестима. Тиме доприносиш ширењу поруке и прикупљању подршке грађана.",
+        
+        "question3": "Ко може да учествује у пленуму?",
+        "answer3": "У пленуму могу учествовати сви студенти и студенткиње, без обзира на факултет или смер. Важно је да се сваки глас чује, а критична мишљења су добродошла, што доприноси демократској и отвореној расправи о будућим акцијама.",
+        
+        "question4": "Како се донације користе?",
+        "answer4": "Донације се транспарентно користе за финансирање трошкова протеста, као што су логистика, израда промотивних материјала, организација перформанса и подршка жртвама насиља. Средства се јавно извештавају на пленуму, тако да сви учесници могу да виде како се новац користи.",
+        
+        "question5": "Шта су радне групе?",
+        "answer5": "Радне групе су специјализовани тимови студената који се фокусирају на одређене аспекте протестног покрета – попут логистике, комуникације, правне подршке, PR-а и безбедности. Оне омогућавају ефикаснију расподелу задатака и координацију акција, а рад се води уз сталну координацију путем пленума.",
+        
+        "question6": "Како могу да се укључим у радне групе?",
+        "answer6": "Укључи се тако што ћеш посетити један од пленума или контактирати организаторе преко друштвених мрежа. На тај начин можеш изразити интересовање и добити упутства о томе како се придружити одређеној радној групи – било да те занима организација протеста, PR или правна подршка.",
+        
+        "question7": "Који су главни захтеви студената?",
+        "answer7": "Студенти захтевају темељно и независно истраживање несреће у Новом Саду, јавно објављивање комплетне документације о реконструкцији надстрешнице, одговорност одговорних лица, повећање буџета за високо образовање, као и реформу у начину рада власти како би се спречила слична трагедија у будућности.",
+        
+        "question8": "Како се организују протести?",
+        "answer8": "Протести се организују децентрализовано – студенти се окупљају на пленумима где заједнички доносе одлуке. Радне групе потом преузимају специфичне задатке (логистика, комуникација, правна подршка) како би се акције, попут блокада кључних саобраћајница и организације шетњи, спровеле ефикасно. Овај модел је омогућио да се протестни покрет брзо прошири и стекне широка подршка.",
+        
+        "question9": "Да ли су протести демократски и безбедни?",
+        "answer9": "Иако се протести спроводе у изазовним условима, организатори настоје да их воде уз поштовање демократских принципа. Одлуке се доносе колективно, а посебне радне групе за безбедност раде на заштити учесника. Упркос притисцима, студенти и грађани настављају да се окупљају како би изразили своје незадовољство и захтеве за промене.",
+        
+        "question10": "Како се штити слобода говора и право на протест?",
+        "answer10": "Слобода говора и право на протест су основна права која студенти активно бране. На пленумима се подстиче отворена дебата, а правни тимови пружају подршку у случају репресалија. Студенти, уз подршку грађана, захтевају да власт поштује уставне и међународне стандарде, а медији и независне организације настоје да осветле догађаје.",
+        
+        "question11": "Где могу пронаћи најновије информације о протестима?",
+        "answer11": "Најновије информације можете пратити преко званичних веб страница протестних покрета, друштвених мрежа организатора, студентских портала и независних медијских кућа које покривају догађаје у Србији. Препоручује се и праћење обавештења са пленума и радних група како бисте били у току са свим новостима.",
+        
+        "question12": "Шта очекивати у наредним данима?",
+        "answer12": "Организатори најављују наставак протеста, укључујући масовне блокаде кључних саобраћајница, додатне племенске шетње и јавне скупове. Студенти позивају грађане да се придруже јер покрет има за циљ да доведе до дугорочних реформи и потпуног искорењивања корупције. Протестни покрет наставиће се све док се захтеви не испуне и док власт не покаже спремност на стварне промене."
+      },
     "COMMON_QUESTIONS": "Честа питања",
     "FACULTIES": {
       "Arhitektonski Fakultet": "Архитектонски факултет",
-      "Fakultet bezbednosti": "Факултет безбедности",
+      "Fakultet bezbdednosti": "Факултет безбедности",
       "Ekonomski Fakultet": "Економски факултет",
       "ETF": "Електротехнички факултет",
-      "Farmaceutski Fakultet": "Фармацевтски факултет",
+      "Farmaceutski Fakultet": "Фармацеутски факултет",
       "Filološki, Biološki i Geografski fakultet": "Филолошки, Биолошки и Географски факултет",
       "Filozofski Fakultet": "Филозофски факултет",
       "Fizički Fakultet": "Физички факултет",
