--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -45,30 +45,45 @@
     "PROGRESS": "Trenutno u izradi",
     "faq": {
         "question1": "Šta je plenum?",
-        "answer1": "Studentski plenumi su direktno demokratsko-borbene strukture. Kao otvoreni forumi, gde svaki student ima pravo da diskutuje i glasa o pitanjima strategije i taktike studentske socijalne borbe. Odluke plenuma su javne, podložne kritikama i izmenama od strane učesnika plenuma. To plenum čini neuporedivo otpornijim na tajne manevre i malverzacije iza zatvorenih vrata.",
-        "question2": "Replika",
-        "answer2": "Replika je pravo govora koje sledi nakon izlaganja govornika, a koje se odnosi na izlaganje govornika.",
-        "question3": "Pitanje",
-        "answer3": "Pitanje je pravo govora koje sledi nakon izlaganja govornika, a koje se odnosi na izlaganje govornika.",
-        "question4": "Nova reč",
-        "answer4": "Nova reč je pravo govora koje sledi nakon izlaganja govornika, a koje se odnosi na izlaganje govornika.",
-        "question5": "Tehnička replika",
-        "answer5": "Kratak odgovor u vidu činjenične informacije ili objašnjenja bez dodavanja ličnog mišljenja.",
-        "question6": "Kako mogu da pomognem?",
-        "answer6": "Donacijama (link) i izlaženjem na proteste.",
-        "question7": "Ko može da učestvuje u plenumu?",
-        "answer7": "Svi studenti i studentkinje.",
-        "question8": "Kako se donacije koriste?",
-        "answer8": "Donacije se koriste za pokrivanje troškova protesta, štampanje letaka, organizaciju performansa i drugih događaja.",
-        "question9": "Šta su radne grupe?",
-        "answer9": "Radne grupe su grupe studenata i studentkinja koje se bave određenim temama i zadacima. Radne grupe su otvorene za sve zainteresovane studente i studentkinje.",
-        "question10": "Kako mogu da se uključim u radne grupe?",
-        "answer10": "Možeš da se uključiš u radne grupe tako što ćeš posetiti neki od plenuma i izraziti svoju želju da se uključiš u radnu grupu koja te zanima."
-    },
+        "answer1": "Plenum je otvoreni forum na fakultetu ili univerzitetu na kojem se studenti direktno okupljaju kako bi raspravljali o strategiji i taktikama protestnih akcija. Na plenumu se, putem kolektivnog glasanja, donose odluke o organizaciji protesta, što osigurava transparentnost i mogućnost javne kritike.",
+
+        "question2": "Kako mogu da pomognem?",
+        "answer2": "Možeš pomoći na više načina: finansijskim donacijama koje se koriste za pokrivanje troškova organizacije protesta (štampanje letaka, iznajmljivanje prostora, osiguranje zaštitne opreme), deljenjem informacija putem društvenih mreža, kao i ličnim prisustvom na protestima. Time doprinosiš širenju poruke i prikupljanju podrške građana.",
+        
+        "question3": "Ko može da učestvuje u plenumu?",
+        "answer3": "U plenumu mogu učestvovati svi studenti i studentkinje, bez obzira na fakultet ili smer. Važno je da se svaki glas čuje, a i kritična mišljenja su dobrodošla, što doprinosi demokratskoj i otvorenoj raspravi o budućim akcijama.",
+        
+        "question4": "Kako se donacije koriste?",
+        "answer4": "Donacije se transparentno koriste za finansiranje troškova protesta, kao što su logistika, izrada promotivnih materijala, organizacija performansa i podrška žrtvama nasilja. Sredstva se javno izveštavaju na plenumu, tako da svi učesnici mogu da vide kako se novac koristi.",
+        
+        "question5": "Šta su radne grupe?",
+        "answer5": "Radne grupe su specijalizovani timovi studenata koji se fokusiraju na određene aspekte protestnog pokreta – poput logistike, komunikacije, pravne podrške, PR-a i bezbednosti. One omogućavaju efikasniju raspodelu zadataka i koordinaciju akcija, a rad se vodi uz stalnu koordinaciju putem plenuma.",
+        
+        "question6": "Kako mogu da se uključim u radne grupe?",
+        "answer6": "Uključi se tako što ćeš posetiti jedan od plenuma ili kontaktirati organizatore preko društvenih mreža. Na taj način možeš izraziti interesovanje i dobiti uputstva o tome kako se priključiti određenoj radnoj grupi – bilo da te zanima organizacija protesta, PR ili pravna podrška.",
+        
+        "question7": "Koji su glavni zahtevi studenata?",
+        "answer7": "Studenti zahtevaju temeljno i nezavisno istraživanje nesreće u Novom Sadu, javno objavljivanje kompletne dokumentacije o rekonstrukciji nadstrešnice, odgovornost odgovornih lica, povećanje budžeta za visoko obrazovanje, kao i reformu u načinu rada vlasti kako bi se sprečila slična tragedija u budućnosti0}.",
+        
+        "question8": "Kako se organizuju protesti?",
+        "answer8": "Protesti se organizuju decentralizovano – studenti se okupljaju na plenumima gde zajednički donose odluke. Radne grupe potom preuzimaju specifične zadatke (logistika, komunikacija, pravna podrška) kako bi se akcije, poput blokada ključnih saobraćajnica i organizacije šetnji, sprovele efikasno. Ovaj model je omogućio da se protestni pokret brzo proširi i stekne široku podršku1}.",
+        
+        "question9": "Da li su protesti demokratski i bezbedni?",
+        "answer9": "Iako su protesti sprovođeni u izazovnim uslovima, organizatori nastoje da ih vode uz poštovanje demokratskih principa. Odluke se donose kolektivno, a posebne radne grupe za bezbednost rade na zaštiti učesnika. Uprkos pritiscima, studenata i građani nastavljaju da se okupljaju kako bi izrazili svoje nezadovoljstvo i zahteve za promene2}.",
+        
+        "question10": "Kako se štiti sloboda govora i pravo na protest?",
+        "answer10": "Sloboda govora i pravo na protest su osnovna prava koja studenti aktivno brane. Na plenumima se podstiče otvorena debata, a pravni timovi pružaju podršku u slučaju represalija. Studenti, uz podršku građana, zahtevaju da vlast poštuje ustavne i međunarodne standarde, a mediji i nezavisne organizacije nastoje da osvetle događaje3}.",
+        
+        "question11": "Gde mogu pronaći najnovije informacije o protestima?",
+        "answer11": "Najnovije informacije možete pratiti preko zvaničnih web stranica protestnih pokreta, društvenih mreža organizatora, studentskih portala i nezavisnih medijskih kuća koje pokrivaju događaje u Srbiji. Preporučuje se i praćenje obaveštenja sa plenuma i radnih grupa kako biste bili u toku sa svim novostima4}.",
+        
+        "question12": "Šta očekivati u narednim danima?",
+        "answer12": "Organizatori najavljuju nastavak protesta, uključujući masovne blokade ključnih saobraćajnica, dodatne plemenske šetnje i javne skupove. Studenti pozivaju građane da se pridruže jer pokret ima cilj da dovede do dugoročnih reformi i potpunog iskorenjivanja korupcije. Protestski pokret nastaviće se sve dok se zahtevi ne ispune i dok vlast ne pokaže spremnost na stvarne promene5}."
+      },
     "COMMON_QUESTIONS": "Česta pitanja",
     "FACULTIES": {
         "Arhitektonski Fakultet": "Arhitektonski Fakultet",
-        "Fakultet bezbednosti": "Fakultet bezbednosti",
+        "Fakultet bezbdednosti": "Fakultet bezbednosti",
         "Ekonomski Fakultet": "Ekonomski Fakultet",
         "ETF": "Elektrotehnički Fakultet",
         "Farmaceutski Fakultet": "Farmaceutski Fakultet",
