Update translations for status messages in English and Serbian

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,8 +39,8 @@
         "MAŠINSKI": "Faculty of Mechanical Engineering"
     },
     "STATUS": {
-        "FULFILLED": "Fulfilled",
-        "NOT_FULFILLED": "Not fulfilled"
+        "FULFILLED": "FULFILLED",
+        "NOT_FULFILLED": "NOT FULFILLED"
     },
     "PROGRESS": "Currently in progress",
 "faq": {
