Refactor donation scraping and marker display to categorize items by type and update translations for urgency and excess

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,9 @@
     "DONATIONS": {
         "BUTTON_TOOLTIP": "Visit blokadnedonacije.rs",
         "BUTTON_TEXT": "Donate",
-        "NEEDED": "Needed"
+        "NEEDED": "Needed",
+        "URGENT": "Urgent",
+        "EXCESS": "Excess"
       },
     "typewriter": {
         "text1": "Demands are not fulfilled",
