--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -9,7 +9,9 @@
     "DONATIONS": {
         "BUTTON_TOOLTIP": "Посети blokadnedonacije.rs",
         "BUTTON_TEXT": "Донирај",
-        "NEEDED": "Потребно"
+        "NEEDED": "Потребно",
+        "URGENT": "Хитно",
+        "EXCESS": "Вишак"
       },
     "typewriter": {
         "text1": "Захтеви нису испуњени",
