Update donation component styles and enhance school name translations with with new schools update

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -112,6 +112,13 @@
     "BAPUSS - Poslovni": "BAPUSS - Business",
     "Visoka zdravstvena škola": "Higher School of Health",
     "VIŠER": "VIŠER",
-    "Univerzitet Metropolitan": "Metropolitan University"
+    "Univerzitet Metropolitan": "Metropolitan University",
+    "Visoka hotelijerska skola": "Higher School of Hotel Management",
+    "Fakultet sporta i fizičkog DIF": "Faculty of Sport and Physical Education DIF",
+    "Medicinski Fakultet (zgrada instituta za anatomiju)": "Faculty of Medicine",
+    "Bogoslovski Fakultet": "Faculty of Theology",
+    "Šumarski Fakultet": "Faculty of Forestry",
+    "Rudarsko Geološki Fakultet": "Faculty of Mining and Geology",
+    "Saobraćajni Fakultet": "Faculty of Traffic"
   }
 }
