--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -112,7 +112,14 @@
       "BAPUSS - Poslovni": "БАПУСС - Пословни",
       "Visoka zdravstvena škola": "Висока здравствена школа",
       "VIŠER": "ВИШЕР",
-      "Univerzitet Metropolitan": "Универзитет Метрополитан"
+      "Univerzitet Metropolitan": "Универзитет Метрополитан",
+      "Visoka hotelijerska skola": "Виша школа хотелјерства",
+      "Fakultet sporta i fizičkog DIF": "Факултет спорта и физичког васпитања ДИФ",
+      "Medicinski Fakultet (zgrada instituta za anatomiju)": "Медицински факултет",
+      "Bogoslovski Fakultet": "Богословски факултет",
+      "Šumarski Fakultet": "Шумарски факултет",
+      "Rudarsko Geološki Fakultet": "Рударско-геолошки факултет",
+      "Saobraćajni Fakultet": "Саобраћајни факултет"  
     }
   }
   
