--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -112,6 +112,13 @@
         "BAPUSS - Poslovni": "BAPUSS - Poslovni",
         "Visoka zdravstvena škola": "Visoka zdravstvena škola",
         "VIŠER": "VIŠER",
-        "Univerzitet Metropolitan": "Univerzitet Metropolitan"
+        "Univerzitet Metropolitan": "Univerzitet Metropolitan",
+        "Visoka hotelijerska skola": "Viša škola hotelijerstva",
+        "Fakultet sporta i fizičkog DIF": "Fakultet sporta i fizičkog vaspitanja DIF",
+        "Medicinski Fakultet (zgrada instituta za anatomiju)": "Medicinski fakultet",
+        "Bogoslovski Fakultet": "Bogoslovski fakultet",
+        "Šumarski Fakultet": "Šumarski fakultet",
+        "Rudarsko Geološki Fakultet": "Rudarsko-geološki fakultet",
+        "Saobraćajni Fakultet": "Saobraćajni fakultet"
       }
     }
