Update localization files and favicon; enhance urgency in messages

--- a/src/assets/i18n/sr-cyr.json
+++ b/src/assets/i18n/sr-cyr.json
@@ -14,7 +14,7 @@
         "EXCESS": "Вишак"
       },
     "typewriter": {
-        "text1": "Захтеви нису испуњени",
+        "text1": "Захтеви НИСУ испуњени!",
         "text2": "Технички факултети у блокади"
     },
     "zahtev1": {
@@ -50,7 +50,7 @@
         "answer1": "Пленум је отворени форум на факултету или универзитету на којем се студенти директно окупљају како би расправљали о стратегијама и тактикама протестних акција. На пленуму се, путем колективног гласања, доносе одлуке о организацији протеста, што обезбеђује транспарентност и могућност јавне критике.",
         
         "question2": "Ко може да учествује у пленуму?",
-        "answer2": "У пленуму могу учествовати сви студенти и студенткиње, без обзира на смер. Важно је да се сваки глас чује, а критична мишљења су добродошла, што доприноси демократској и отвореној расправи о будућим акцијама.",
+        "answer2": "У пленуму могу учествовати сви студенти и студенткиње, без обзира на смер. Важно је да се сваки глас чује, а критичка мишљења су добродошла, што доприноси демократској и отвореној расправи о будућим акцијама.",
         
         "question3": "Како могу да помогнем?",
         "answer3": "Можеш помоћи на више начина: финансијским донацијама које се користе за покривање трошкова организације протеста (штампање летака, изнајмљивање простора, осигурање заштитне опреме), дељењем информација путем друштвених мрежа, као и личним присуством на протестима. Тиме доприносиш ширењу поруке и прикупљању подршке грађана.",
