--- a/src/assets/i18n/sr-lat.json
+++ b/src/assets/i18n/sr-lat.json
@@ -14,7 +14,7 @@
         "EXCESS": "Višak"
       },
     "typewriter": {
-        "text1": "Zahtevi nisu ispunjeni",
+        "text1": "Zahtevi NISU ispunjeni!",
         "text2": "Tehnički fakulteti u blokadi"
     },
     "zahtev1": {
@@ -50,7 +50,7 @@
         "answer1": "Plenum je otvoreni forum na fakultetu ili univerzitetu na kojem se studenti direktno okupljaju kako bi raspravljali o strategiji i taktikama protestnih akcija. Na plenumu se, putem kolektivnog glasanja, donose odluke o organizaciji protesta, što osigurava transparentnost i mogućnost javne kritike.",
 
         "question2": "Ko može da učestvuje u plenumu?",
-        "answer2": "U plenumu mogu učestvovati svi studenti i studentkinje, bez obzira na fakultet ili smer. Važno je da se svaki glas čuje, a i kritična mišljenja su dobrodošla, što doprinosi demokratskoj i otvorenoj raspravi o budućim akcijama.",
+        "answer2": "U plenumu mogu učestvovati svi studenti i studentkinje, bez obzira na fakultet ili smer. Važno je da se svaki glas čuje, a i kritička mišljenja su dobrodošla, što doprinosi demokratskoj i otvorenoj raspravi o budućim akcijama.",
         
         "question3": "Kako mogu da pomognem?",
         "answer3": "Možeš pomoći na više načina: finansijskim donacijama koje se koriste za pokrivanje troškova organizacije protesta (štampanje letaka, iznajmljivanje prostora, osiguranje zaštitne opreme), deljenjem informacija putem društvenih mreža, kao i ličnim prisustvom na protestima. Time doprinosiš širenju poruke i prikupljanju podrške građana.",
